# device_board_atk

./: README.md
dlmp135/: BUILD.gn  config.gni  device.gni  ohos.build
dlmp135/bootfs/: BUILD.gn  bootfs_image_conf.txt  env
dlmp135/bootfs/boot_scripts/: BUILD.gn  ohos_copy_scripts.sh
dlmp135/bootfs/boot_scripts/extlinux/: extlinux.conf
dlmp135/bootfs/kernel/: ohos_build_kernel.sh
dlmp135/fip/: BUILD.gn  ohos_build_fip.sh  ohos_copy_flashlayout.sh
dlmp135/fip/flashlayout/optee/: FlashLayout_emmc_stm32mp135d-atk-optee.tsv  FlashLayout_sdcard_stm32mp135d-atk-optee.tsv
dlmp135/fip/optee/: BUILD.gn  ohos_build_optee.sh
dlmp135/fip/tf-a/: BUILD.gn  Makefile.sdk  ohos_build_fiptool.sh  ohos_build_tfa.sh
dlmp135/fip/uboot/: BUILD.gn  ohos_build_uboot.sh
dlmp135/make_bootfs/: BUILD.gn  bootfs.gni  ohos_copy_scripts.sh
dlmp135/make_bootfs/kernel/: BUILD.gn  ohos_build_kernel.sh
