import("//build/ohos.gni")

print("fip in")

# fip
fip_source_dir = "${root_build_dir}/fip/deploy"
fip_target_dir = "${root_build_dir}/packages/phone/images"

action("fip") {
    script = "ohos_build_fip.sh"
    outputs = [
        "${fip_target_dir}/fip/fip-stm32mp135d-atk-optee.bin",
        "${fip_target_dir}/arm-trusted-firmware/metadata.bin",
        "${fip_target_dir}/arm-trusted-firmware/tf-a-stm32mp135d-atk-emmc.stm32",
        "${fip_target_dir}/arm-trusted-firmware/tf-a-stm32mp135d-atk-sdcard.stm32",
        "${fip_target_dir}/arm-trusted-firmware/tf-a-stm32mp135d-atk-usb.stm32",
    ]
    args = [
        # fip构建的地方, 在tf-a,optee,uboot发布的目录
        rebase_path("${fip_source_dir}"),
        
        # fip输出的地方, 在phone的images目录
        rebase_path("${fip_target_dir}"),
    ]
    deps = [
        "tf-a:fiptool",
        "tf-a:tf-a",
        "optee:optee",
        "uboot:uboot",
    ]
}

# flashlayout
flashlayout_source_dir = "//device/board/atk/${device_name}/fip/flashlayout"
flashlayout_target_dir = "${root_build_dir}/packages/phone/images"

action("flashlayout") {
    script = "ohos_copy_flashlayout.sh"
    sources = [ flashlayout_source_dir ]
    outputs = [
        "${flashlayout_target_dir}/flashlayout/optee/FlashLayout_emmc_stm32mp135d-atk-optee.tsv",
        "${flashlayout_target_dir}/flashlayout/optee/FlashLayout_sdcard_stm32mp135d-atk-optee.tsv",
    ]
    args = [
        rebase_path("${flashlayout_source_dir}"),
        rebase_path("${flashlayout_target_dir}"),
    ]
}
