import("//build/ohos.gni")
import("//build/ohos/build_var.gni")

# 简化脚本, 只编 phone
# import("${build_configs_path}/platforms_list.gni")
_platform = "phone"

# 镜像名字
_image_name = "bootfs"

# 生成的文件夹
current_platform_dir = "${product_output_dir}/${_platform}"

# 生成的镜像文件夹
bootfs_path = "${current_platform_dir}/${_image_name}"
