import("//build/config/python.gni")
import("//build/ohos.gni")
import("//build/ohos/build_var.gni")

bootfs_path = "${product_output_dir}/phone/bootfs"
boot_scripts_source_dir = "//device/board/atk/dlmp135/bootfs/boot_scripts"
ramdisk_path = "${product_output_dir}/phone/images/ramdisk.img"

# 拷贝启动脚本
action("boot_scripts") {
    script = "ohos_copy_scripts.sh"
    sources = [
        boot_scripts_source_dir,
    ]
    outputs = [
        "${bootfs_path}/ramdisk.img",
        "${bootfs_path}/extlinux",
        "${bootfs_path}/alientek_800x480.bmp",
    ]
    # deps = [
    #     "//build/ohos/images:phone_ramdisk_image",
    # ]
    args = [
        # 源码目录
        rebase_path("${boot_scripts_source_dir}"),
        # 目标目录
        rebase_path("${ramdisk_path}"),
        # 目标目录
        rebase_path("${bootfs_path}"),
    ]
}
