import("//build/config/clang/clang.gni")
import("//build/ohos.gni")

optee_source_dir = "//device/board/atk/dlmp135/fip/optee"

action("optee") {
    script = "ohos_build_optee.sh"
    sources = [ optee_source_dir ]
    outputs = [
        "$root_build_dir/fip/deploy/tee-header_v2-stm32mp135d-atk.bin",
        "$root_build_dir/fip/deploy/tee-pageable_v2-stm32mp135d-atk.bin",
        "$root_build_dir/fip/deploy/tee-pager_v2-stm32mp135d-atk.bin",
    ]
    args = [
        rebase_path("$root_build_dir"),
    ]
}

