import("//build/config/clang/clang.gni")
import("//build/ohos.gni")

uboot_source_dir = "//device/board/atk/dlmp135/fip/uboot"

action("uboot") {
    script = "ohos_build_uboot.sh"
    sources = [ uboot_source_dir ]
    outputs = [
        "$root_build_dir/fip/deploy/u-boot-nodtb-stm32mp13.bin",
        "$root_build_dir/fip/deploy/u-boot-stm32mp135d-atk-trusted.dtb",
    ]
    args = [
        rebase_path("$root_build_dir"),
    ]
}
